--- a/package.json
+++ b/package.json
@@ -14,22 +14,21 @@
   "license": "ISC",
   "packageManager": "pnpm@9.7.1",
   "dependencies": {
+    "@paypal/paypal-server-sdk": "^0.6.1",
+    "@paypal/paypalhttp": "^1.0.1",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.7.2"
+    "mongoose": "^8.7.2",
+    "node-fetch": "^3.3.2"
   },
   "devDependencies": {
-    "@eslint/js": "^9.13.0",
-    "eslint": "^8.57.1",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-define-config": "^2.1.0",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-n": "^16.6.2",
-    "eslint-plugin-promise": "^6.6.0",
+    "eslint": "^9.22.0",
     "globals": "^15.11.0",
     "nodemon": "^3.1.7"
   }
