--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.2",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "nodemailer": "^6.10.0"
   },
   "devDependencies": {
     "eslint": "^9.22.0",
